<resources>
    <string name="app_name">Weather</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="setting_title">City Lists</string>
    <string name="setting_help">Check the city you want to show.</string>
    <string name="Seoul">Seoul</string>
    <string name="Daejeon">Daejeon</string>
    <string name="Daegu">Daegu</string>
    <string name="Busan">Busan</string>
    <string name="Introduce">Select + button to modify list.</string>
    <string name="Introduce2">Tab the city name to get detailed info.</string>
    <string name="minTitle">Min temp</string>
    <string name="maxTitle">Max temp</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="feelsLike">Feels like : </string>

</resources>
